# opendressi

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
android/app/src/main/java/org/dressi/examples/: MainActivity.kt
cmake/: FetchAssets.cmake
docs/: benchmarks.md
examples/: CMakeLists.txt
examples/common/: asset_utils.cpp  asset_utils.h  bench.cpp  bench.h  geometry_utils.cpp  geometry_utils.h  pbr_graph.cpp  pbr_graph.h
examples/image_fitting/: run.cpp
examples/pbr_envmap_optimization/: run.cpp
examples/pbr_material_optimization/: run.cpp
examples/pbr_shading/: main.cpp  run.cpp
examples/silhouette_optimization/: main.cpp  run.cpp
examples/texture_optimization/: main.cpp  run.cpp
include/dressi/: dressi.h  dressi_ad.h  f.h  ibl.h
log/: 202607101059_dressi_ad_raster_texture_optimization.md  202607101300_vertex_gradients_hardsoftras_aa.md  202607102040_comp_substages_rematerialization.md  202607102300_torch_python_bindings.md  202607111330_pbr_ibl_stage_a.md  202607121200_android_port.md  202607131450_bench_batch_scripts_and_packing.md  202607132330_android_bench_ux_and_stopback_fix.md  202607181430_readme_demo_gifs_android_all_view.md
python/csrc/: module.cpp
python/dressi/torch/: engine.py  ops.py
scripts/: bench_summary.py  make_readme_gifs.sh  pull_android_benches.sh  run_benches.ps1  run_benches.py  run_benches.sh
src/: dressi_ad.cpp
src/codegen/: glsl_codegen.cpp  glsl_codegen.h
src/core/: cpu_raster.cpp  cpu_raster.h  f_ops.cpp  ibl.cpp  ibl_math.h
src/pack/: greedy_packer.cpp  substage.h  trivial_packer.cpp
src/vk/: context.cpp  executor.cpp  executor.h  transfer.cpp  transfer.h
tests/: CMakeLists.txt  test_backward.cpp  test_cpu_eval.cpp  test_graph.cpp  test_ibl_gpu.cpp  test_infer.cpp  test_packing.cpp  test_raster.cpp  test_softras.cpp
